--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@
     --white: #ffffff;
     --light-pink: #fff2fc;
     --color-navy: #10162f;
-
-    /* color-scheme: li; */
 }
 
 body {
@@ -20,6 +18,13 @@ body {
     background-image: repeating-linear-gradient(45deg, #fff2fc 0, #fff2fc 1px, #e5e5f7 0, #e5e5f7 50%);
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 a {
     color: inherit;
     text-decoration: inherit;
@@ -27,7 +32,10 @@ a {
 
 /* Navigation Bar */
 
-.header {
+#header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
 }
 
@@ -57,31 +65,34 @@ nav {
 
 /* Navigation menu */
 
-nav ul {
-    list-style: none;
-    display: inline-flex;
-    padding-right: 2rem;
+.link-container {
+    display: flex;
     justify-content: flex-end;
+    padding-right: 2rem;
+    list-style: none;
+    gap: 1.4rem;
 }
 
-nav ul li {
+.link-container li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 95px;
+    height: 45px;
     background-color: var(--light-pink);
     color: var(--black);
     border: solid var(--border-thickness) var(--black);
     border-radius: var(--border-radius);
     font-family: inherit;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0rem 1rem 0rem 1rem;
+    white-space: nowrap;
 }
 
-nav ul li a {
-    padding: 1rem 1.5rem;
-}
-
-nav ul li:hover {
+.link-container li:hover {
     animation: fade-menu-button 0.2s ease forwards;
+}
+
+.nav-link {
+    padding: 1rem 1.5rem;
 }
 
 @keyframes fade-menu-button {
@@ -99,8 +110,10 @@ nav ul li:hover {
 
 #title-container {
     text-align: center;
-    padding: 2rem max((100% - 71.25rem)/2, 4rem);
     margin-top: 7rem;
+    padding: 3rem 3rem 0;
+    max-width: 1100px;
+    width: 100%;
 }
 
 #title-container h1 {
@@ -141,10 +154,11 @@ nav ul li:hover {
 /* Content / Blog posts  */
 
 #content {
-    padding: 3rem max((100% - 71.25rem)/2, 4rem);
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 3rem;
+    max-width: 1100px;
 }
 
 #content a {
@@ -181,8 +195,12 @@ nav ul li:hover {
 #content article .author {
     text-align: right;
     font-size: 0.875rem;
-    line-height: 1.3;
-    --line-height: 1.1375rem;
+    line-height: 1.3rem;
+    margin-top: 5px;
+}
+
+.fa-user-astronaut {
+    font-size: 1.1rem;
 }
 
 .right-padding {
@@ -220,11 +238,29 @@ footer h5 {
     #title-container {
         padding: 1.8rem;
     }
+}
 
-    nav ul li {
-        /* padding: 0.2rem 0.2rem; */
-        margin: 0.3rem;
-        height: 50px;
-        width: 80px;
+@media screen and (max-width: 600px) {
+    nav {
+        flex-direction: column;
+    }
+
+    #logo-container img {
+        padding: 0;
+        margin-top: 0.3rem;
+    }
+
+    .link-container {
+        padding: 0 0.5rem;
+        margin-top: 5px;
+    }
+
+    .link-container li {
+        width: 90px;
+        height: 40px;
+    }
+
+    #title-container {
+        margin-top: 9rem;
     }
 }
